@@ -2721,6 +2721,11 @@ Ejemplo:
         <translation>Sonido</translation>
     </message>
     <message>
+        <location filename="settingswidget.cpp" line="52"/>
+        <source>&amp;Clipboard Mode</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <location filename="settingswidget.cpp" line="155"/>
         <source>Bidirectional copy and paste</source>
         <translation type="unfinished"></translation>
