@@ -2699,6 +2699,11 @@ Näiteks:
         <translation>Heli</translation>
     </message>
     <message>
+        <location filename="settingswidget.cpp" line="52"/>
+        <source>&amp;Clipboard Mode</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <location filename="settingswidget.cpp" line="66"/>
         <source>Fullscreen</source>
         <translation>Täisekraan</translation>
