@@ -2688,6 +2688,11 @@ maar bent</translation>
         <translation>Geluid</translation>
     </message>
     <message>
+        <location filename="settingswidget.cpp" line="52"/>
+        <source>&amp;Clipboard Mode</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <location filename="settingswidget.cpp" line="66"/>
         <source>Fullscreen</source>
         <translation>Volledig scherm</translation>
