@@ -49,6 +49,7 @@ x2goclient (4.0.2.1-0x2go1) UNRELEASED; urgency=low
       Replace qCritical() with printError() by argument parsing.
     - Update translation files.
     - Update russian translation.
+    - Update string "&Clipboard Mode" and translate in russian translation file.
 
   [ Mike DePaulo ]
   * New upstream release (4.0.2.1):
